# internal-sea-core

./: .env.example  .gitignore  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  sonar-project.properties
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_system_info.py  0002_create_core_domain_models.py  0003_create_projects.py  0004_comments_activity.py  0005_entity_links.py  0006_files_evidence.py  0007_compliance_foundation.py  0008_auth_permissions.py  0009_automation_foundation.py  0010_performance_metrics.py  0011_notifications_foundation.py  0012_worker_execution_foundation.py  0013_saas_tenant_foundation.py
apps/api/app/: __init__.py  config.py  dependencies.py  main.py
apps/api/app/api/: auth_deps.py
apps/api/app/core/: __init__.py  errors.py  exception_handlers.py  logging.py  pagination.py  request_id.py  request_logging.py  security.py
apps/api/app/db/: __init__.py  health.py  mixins.py  queries.py  session.py
apps/api/app/domain/: __init__.py  enums.py
apps/api/app/models/: __init__.py  activity.py  automation.py  catalog.py  compliance.py  files.py  identity.py  notifications.py  people.py  performance.py  projects.py  relationships.py  system.py  tenancy.py  work.py
apps/api/app/modules/: __init__.py
apps/api/app/seed/: README.md  __init__.py  seed.py  seed_data.py  tenant.py
apps/api/app/worker/: README.md  __init__.py  health.py  locks.py  main.py  runner.py  scheduler.py  schemas.py
apps/api/tests/: conftest.py  test_activity_api.py  test_activity_schemas.py  test_activity_service.py  test_auth_api.py  test_auth_schemas.py  test_auth_security.py  test_auth_service.py  test_automation_api.py  test_automation_runner.py  test_automation_schemas.py  test_automation_service.py  test_automation_validators.py  test_capabilities_api.py  test_capabilities_schemas.py  test_capabilities_service.py  test_comments_api.py  test_comments_schemas.py  test_compliance_api.py  test_compliance_schemas.py  test_compliance_service.py  test_compliance_validators.py  test_config.py  test_dashboard_advanced_api.py  test_dashboard_advanced_schemas.py  test_dashboard_api.py  test_dashboard_insights.py  test_dashboard_schemas.py  test_dashboard_scoring.py  test_dashboard_service.py  test_data_product_api.py  test_data_product_schemas.py  test_data_product_service.py  test_database.py  test_error_handlers.py  test_files_api.py  test_files_schemas.py  test_files_service.py  test_files_validators.py  test_health.py  (+45 more)
(+698 files in other folders)
