[project]
name = "internal-sea-core-api"
version = "0.1.0"
description = "Internal Sea FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5",
    "PyJWT>=2.10.0",
    "email-validator>=2.2.0",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests", "alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require a live PostgreSQL database",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["app"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "app.seed.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "app.modules.*.repository",
    "app.modules.dashboard.advanced_repository",
    "app.modules.relationships.service",
    "app.worker.runner",
    "app.modules.files.service",
]
disable_error_code = ["no-any-return", "attr-defined", "call-overload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
